# BridgeKeeper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bridgekeeper.py  requirements.txt  setup.cfg
bridgekeeper/: __init__.py  __main__.py
bridgekeeper/core/hunt/: __init__.py  hunter.py
bridgekeeper/core/scrape/: __init__.py  scraper.py
bridgekeeper/core/scrape/engines/: __init__.py  base.py  bing.py  duckduckgo.py  google.py  yahoo.py
bridgekeeper/core/transform/: __init__.py  transformer.py
bridgekeeper/utils/: colors.py  defaults.py  helper.py  logger.py
core/: __init__.py  hunter.py  scraper.py  transformer.py
