[metadata]
name = bridgekeeper
version = attr: bridgekeeper.__init__.__version__
description = Scrape employee names from search engine LinkedIn profiles. Convert employee names to a specified username format.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0xZDH/BridgeKeeper
author = 0xZDH
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find_namespace:
install_requires =
    beautifulsoup4
    colorama
    lxml
    requests
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    bridgekeeper = bridgekeeper.__main__:main